[package]
name = "lil_challenges"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = [ "derive" ] }
test-case = "2.0.0"
log = "0.4.14"

[profile.release]
opt-level = "z"
lto = "thin"
